--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,7 @@ params:
     - title: FAQ
       url: /faq
       style: link
+  domain: 'https://marvelous-turmeric-dbc09.netlify.app'
 taxonomies:
   stub: stub
 disableKinds:
